k8s/app_java/service.yml
apiVersion: v1
kind: Service
metadata:
  name: vacation-calculator-service
spec:
  type: NodePort
  selector:
    app: vacation-calculator
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30001  # Not a best way, but for now we do not have a balancer on edge of the k8s network
