k8s/app_java/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: appjava.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: appjava-service
            port:
              number: 8080
